--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion Versions.compile_sdk_version
     defaultConfig {
         applicationId "pl.denathan.currlator"
-        minSdkVersion 23
-        targetSdkVersion 28
+        minSdkVersion Versions.min_sdk_version
+        targetSdkVersion Versions.target_sdk_version
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -24,11 +24,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation Dependencies.kotlin_stdlib
+    implementation Dependencies.androidx_appcompat
+    implementation Dependencies.androidx_core_ktx
+    implementation Dependencies.constraint_layout
+    testImplementation Dependencies.junit
+    androidTestImplementation Dependencies.androidx_junit
+    androidTestImplementation Dependencies.androidx_espresso
 }
