Created blank fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,12 @@ dependencies {
     implementation Dependencies.androidx_appcompat
     implementation Dependencies.androidx_core_ktx
     implementation Dependencies.constraint_layout
-    
+
     implementation Dependencies.rxJava2
     implementation Dependencies.rxJava2Android
     implementation Dependencies.rxBinding
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation Dependencies.junit
     androidTestImplementation Dependencies.androidx_junit
     androidTestImplementation Dependencies.androidx_espresso
