--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    kotlinOptions {
+        jvmTarget = 1.8
+    }
 }
 
 dependencies {
@@ -27,6 +30,8 @@ dependencies {
     implementation Dependencies.androidx_appcompat
     implementation Dependencies.androidx_core_ktx
     implementation Dependencies.constraint_layout
+    implementation Dependencies.activity
+    implementation Dependencies.fragment
 
     implementation Dependencies.rxJava2
     implementation Dependencies.rxJava2Android
