Added Retrofit and Gson dependencies, created remote data classes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation Dependencies.dagger
     kapt Dependencies.daggerCompiler
 
+    implementation Dependencies.retrofit
+    implementation Dependencies.gson
+
     testImplementation Dependencies.junit
     androidTestImplementation Dependencies.androidx_junit
     androidTestImplementation Dependencies.androidx_espresso
