--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,12 @@ android {
     kotlinOptions {
         jvmTarget = 1.8
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
