--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     testImplementation Dependencies.mockito
     androidTestImplementation Dependencies.androidx_junit
     androidTestImplementation Dependencies.androidx_espresso
+
+    implementation 'com.google.android.material:material:1.1.0'
 }
